src/test/ui/impl-trait/in-trait/trait-more-generics-than-impl.stderr
error[E0049]: method `bar` has 0 type parameters but its trait declaration has 1 type parameter
  --> $DIR/trait-more-generics-than-impl.rs:11:11
   |
LL |     fn bar<T>() -> impl Sized;
   |            - expected 1 type parameter
...
LL |     fn bar() -> impl Sized {}
   |           ^ found 0 type parameters

error[E0049]: method `bar` has 0 type parameters but its trait declaration has 1 type parameter
  --> $DIR/trait-more-generics-than-impl.rs:11:11
   |
LL |     fn bar<T>() -> impl Sized;
   |            - expected 1 type parameter
...
LL |     fn bar() -> impl Sized {}
   |           ^ found 0 type parameters

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0049`.
